# wasm-calculator-demo

./: Cargo.toml  LICENSE_MIT
docs/: index.html  package.json  wasm_calculator_demo.d.ts  wasm_calculator_demo.js  wasm_calculator_demo_bg.wasm  wasm_calculator_demo_bg.wasm.d.ts
src/: lib.rs
src/calculator/: calculator.pest  parser.rs
web/: index.html
