[package]
name = "wasm-calculator-demo"
version = "0.1.0"
authors = ["msqtt <mosquito@email.cn>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.84"
pest = "2.7.15"
pest_derive = "2.7.15"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
